lang updates + better feature generation